# aiogram-dialog-store

./: .gitignore  pyproject.toml
app/core/abstractions/services/: categories.py  products.py
app/core/exceptions/: __init__.py  categories.py
app/core/impl/services/: categories.py  products.py
app/core/models/: __init__.py  category.py  product.py  product_category.py
app/init/: config.py
app/scripts/: db.py
tests/: conftest.py
tests/services/: test_categories.py  test_products.py
