[tool.poetry]
name = "aiogram-dialog-store"
version = "0.1.0"
description = ""
authors = ["Kudyakov Artem <t3m8ch@yandex.ru>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b2"
aiogram_dialog = { git = "https://github.com/Tishka17/aiogram_dialog", branch = "feature/aiogram3" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
