[tool.poetry]
name = "aiogram-dialog-store"
version = "0.1.0"
description = ""
authors = ["Kudyakov Artem <t3m8ch@yandex.ru>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b2"
aiogram_dialog = { git = "https://github.com/Tishka17/aiogram_dialog", branch = "feature/aiogram3" }
SQLAlchemy = "^1.4.31"
asyncpg = "^0.25.0"
tomli = "^2.0.1"
dataclass-factory = "^2.14"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"

[tool.poetry.scripts]
init_db = "app.scripts.db:init_db"
drop_db = "app.scripts.db:drop_db"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
